[tool.poetry]
name = "goit-pythonweb-hw-08"
version = "0.1.0"
description = ""
authors = ["Eduard Schumacher <107512513+mijamoto911@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncpg = "^0.30.0"
alembic = "^1.14.1"
greenlet = "^3.1.1"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
pydantic = {extras = ["email"], version = "^2.10.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
